# sustech-fishing-content-agent

./: .gitignore  CLI_COMPARISON.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE_CLEANUP.md  README.md  RESTRUCTURE_PLAN_V2.md  setup.py
.claude/: settings.local.json
.claude/memory/: MEMORY.md
.claude/skills/: auto-test.md  github-login.md  (+2 more)
docs/: 仓库重命名接口设计.md  仓库重命名方案.md  内容生产流程.md  项目结构.md
fishing-app/: README.md  pyproject.toml
fishing-app/backend/: internal_api.py
fishing-app/backend/agents/: report_agent.py
fishing-app/backend/cron_jobs/: scheduler.py
fishing-app/backend/integrations/: feishu_client.py
fishing-app/cli/: main.py  utils.py
fishing-app/mcp_servers/: fishing_coach_server.py  stop_all.sh
fishing-app/openclaw/: __init__.py  cron_scheduler.py  feishu_handler.py
fishing-app/shared/: config_manager.py  skill_base.py
fishing-app/skills/drone-controller/: __init__.py  cli.py
fishing-app/skills/fish-identifier/: service.py
fishing-app/skills/fishing-coach/: cli.py  service.py
fishing-app/skills/social-manager/: __init__.py
fishing-app/skills/spot-manager/: SKILL.md  __init__.py  cli.py
fishing-app/skills/weather-advisor/: SKILL.md  __init__.py  service.py
fishing-app/web/: api.py  index.html
mcp_servers/: __init__.py  base.py  fish_identifier_server.py  spot_manager_server.py  weather_advisor_server.py
openclaw/: config_loader.py  gateway.py  report_agent.py
shared/: __init__.py  response_formatter.py
universal-skills/: README.md
web/: README.md
千鱼千寻3.0/: IMPLEMENTATION_PLAN.md  PROJECT_SUMMARY.md  README.md
(+92 files in other folders)
